Added clisck to scroll + some small fixes

--- a/nomination-salon.html
+++ b/nomination-salon.html
@@ -15,7 +15,7 @@
         <h1>EcologyForum</h1>
     </center>
     <div id="main-box">
-        <div style="overflow-y: auto; height: 75vh;">
+        <div style="overflow-y: auto; height: 75vh;" id="scroll-box">
             <div style="display: flex; align-items: center; color: black; font-size: 1.5em;">
                 <p><div class="line"></div>10/04/2024<div class="line"></div></p>
             </div>
@@ -110,9 +110,11 @@
                     Your suggestion is good, it can be interresting to see a stylist in this nomination but she could not win aginst the talent of Benjamin Von Wong. If you have already seen his art you understand why I say that. He makes beautifuls installations with on one hand a part of nature and on the other hand a part of waste which is completing the nature beautifully. He confronts both of them in order to take beautifuls photography.
                 </div>
             </div>
+        </br>
         </div>
         <div style="background-color: #69baa0; border-radius: 50px; padding-left: 1em; height: 4.7vh; display: flex; align-items: center;">
             <textarea minlength="1" spellcheck="false" rows="1" maxlength="2500" placeholder="Type here..." style="background-color: #69baa0; font-size: 2.5em; resize: none; color: #101010; border: none; outline: none; width: 96.5%;" ></textarea> <img src="ressources/images/send.png" id="send-btn" style="height: 2.8em; width: 2.8em">
         </div>
     </div>
+    <script type="text/javascript" src="ressources/main.js"></script>
 </body>
