Finished dialogues, added images + a lot of small fix

--- a/nomination-salon.html
+++ b/nomination-salon.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="ressources/main.css" />
     <link rel="icon" type="image/x-icon" href="ressources/images/icon.png">
     <style>
-        @import url('https://fonts.cdnfonts.com/css/linux-biolinum');
+        @import url('https://fonts.cdnfonts.com/css/gg-sans-2');
     </style>
 </head>
 <body>
@@ -29,7 +29,7 @@
             <div class="textbox">
                 <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:09</code></p>
                 <div class="content">
-                    Sorry, I think that I found the perfect artist for the eco-artist of the year nomination. I think that he is bringing a new wave of ecological prevention.
+                    Sorry, but I think that I found the perfect artist for the eco-artist of the year nomination. You will see, he is bringing a new wave of ecological prevention.
                 </div>
             </div>
             <div class="textbox">
@@ -53,7 +53,7 @@
             <div class="textboxy">
                 <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:10</code></p>
                 <div class="contenty">
-                    Actually i don't think we can sanely add it to the list knowing that he is accused of sexual assault.
+                    Actually I don't think we can sanely add it to the list knowing that he is accused of sexual assault.
                 </div>
             </div>
             <div class="textbox">
@@ -101,19 +101,139 @@
             <div class="textbox">
                 <img src="ressources/images/john.jpg" class="pfp"><p>MrJohn <code class="c">19:13</code></p>
                 <div class="content">
-                    It's fine MrJohnson, thanks for your submission, I keep her name in a corner of my head.
+                    Me neither, can you just  provide us with an exemple that you find representative of the artist please ?
+                </div>
+            </div>
+            <div class="textboxy">
+                <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:13</code></p>
+                <div class="contenty">
+                    Yes for sure, here is an example that I find mind-blowing where she assembled used facial mask to create a long dress in order to protest against single use plastics and how it can make marin life worse. She also includes two dogs in the picture to raise awarness on the impact of dogs on the environment and the rise of puppy farms.
+                </div>
+            </div>
+            <div class="textboxy">
+                <p> <code class="c">&nbsp</code></p>
+                <div class="contenty">
+                    <a href="ressources/images/marinadebris.webp" target="_blank"><img src="ressources/images/marinadebris.webp" style="border-radius: 8px; width: 21em; height: 15em;"></a>
                 </div>
             </div>
             <div class="textbox">
-                <img src="ressources/images/smith.jpg" class="pfp"><p>MrSmith <code class="c">19:13</code></p>
+                <img src="ressources/images/john.jpg" class="pfp"><p>MrJohn <code class="c">19:13</code></p>
+                <div class="content">
+                    Fine MrJohnson, thanks for your submission, I keep her name in a corner of my head.
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/smith.jpg" class="pfp"><p>MrSmith <code class="c">19:14</code></p>
                 <div class="content">
                     Your suggestion is good, it can be interresting to see a stylist in this nomination but she could not win aginst the talent of Benjamin Von Wong. If you have already seen his art you understand why I say that. He makes beautifuls installations with on one hand a part of nature and on the other hand a part of waste which is completing the nature beautifully. He confronts both of them in order to take beautifuls photography.
                 </div>
             </div>
-        </br>
+            <div class="textbox">
+                <img src="ressources/images/smith.jpg" class="pfp"><p>MrSmith <code class="c">19:14</code></p>
+                <div class="content">
+                    You can here, contemplate how he merged a giant faucet deversing enormous quantities of trash into a beautiful beach setting to make the viewer feel like the landscape was wasted.
+                </div>
+            </div>
+            <div class="textbox" style="margin-top: -5vh;">
+                <p> <code class="c">&nbsp</code></p>
+                <div class="content">
+                    <a href="ressources/images/vonwong.webp" target="_blank"><img src="ressources/images/vonwong.webp" style="border-radius: 8px; width: 21em; height: 15em;"></a>
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:15</code></p>
+                <div class="content">
+                    Oh oh, I see that we have very interresting contenders this evening, allow me to present mine...
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:16</code></p>
+                <div class="content">
+                    I think Max Liboiron is an ideal opponent to these persons, she has a background in environmental sciences which makes her an expert on the question and she uses waste collected from the Hudson river and surrounding New York areas to make snow globes which I find to be an interesting object. It create a kind of small biome that allow spectators to understand better what's happening down there in the oceans.
+                </div>
+            </div>
+            <div class="textbox" style="margin-top: -5vh;">
+                <p> <code class="c">&nbsp</code></p>
+                <div class="content">
+                    <a href="ressources/images/maxliboiron.jpg" target="_blank"><img src="ressources/images/maxliboiron.jpg" style="border-radius: 8px; width: 21em; height: 15em;"></a>
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/john.jpg" class="pfp"><p>MrJohn <code class="c">19:16</code></p>
+                <div class="content">
+                    Very nice, my turn now !
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/john.jpg" class="pfp"><p>MrJohn <code class="c">19:17</code></p>
+                <div class="content">
+                    If we need to present artists that make a splash, I'm going to chose Lorenzo Quinn and more specifically is art installation called Support that he made in 2017. It's a very striking installation since it is litterally exposed in the Grand Canal of Venise. We can see two gigantic hands allegedly belonging to a child which are holding back the facade of the hotel Ca’ Sagredo, it alert peoples about the risks of the global warming and therefore the rising of the sea level as well as the mass tourism and paquebots which puts the city in danger by weakening its fundations.
+                </div>
+            </div>
+            <div class="textbox" style="margin-top: -5vh;">
+                <p> <code class="c">&nbsp</code></p>
+                <div class="content">
+                    <a href="ressources/images/lorenzoquinn.webp" target="_blank"><img src="ressources/images/lorenzoquinn.webp" style="border-radius: 8px; width: 21em; height: 15em;"></a>
+                </div>
+            </div>
+            <div class="textboxy">
+                <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:18</code></p>
+                <div class="contenty">
+                    Ok, i think that we are all good, everybody has presented his artist. Let's see if anybody has changed his mind, write down the artist that you think should be elected as eco-artist of the year ! Mine is still Marina Debris for her originality.
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/smith.jpg" class="pfp"><p>MrSmith <code class="c">19:18</code></p>
+                <div class="content">
+                    If it's originality that matter for you, I think that Max Liboiron has had a good idea with her snowball. But personally i really apreciated John's proposition, i find that it's even more shocking for peoples when we try to imagine the rest of the child under the water. It overall something that a really big amount of peoples and to change the mentality of the most numerous is exactly what i'm looking for.
+                </div>
+            </div>
+            <div class="textboxy">
+                <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:19</code></p>
+                <div class="contenty">
+                    Hmmm, yeah.. Its not dumb, I may reconsider my vote now.
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/john.jpg" class="pfp"><p>MrJohn <code class="c">19:20</code></p>
+                <div class="content">
+                    Oh it's very surprising MrJohnson because for myself, even though I have a lot of faith in Lorenzo I have to admit that after digging a bit more in Benjamin's work I find it very seducing.
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:20</code></p>
+                <div class="content">
+                    Well well, I see that everybody is undecisive, on my part I think that after hearing all of this I am going to agree with MrSmith, even if everything is really tight and it's difficult to make a decision, the scope of Lorenzo's message make it preferable to represent our event !
+                </div>
+            </div>
+            <div class="textboxy">
+                <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:20</code></p>
+                <div class="contenty">
+                    Okay, I'm voting for him too now, I guess we can settle on this if everyones agree, it's good for you too MrJohn ?
+                </div>
+            </div>
+            <div class="textbox">
+                <img src="ressources/images/john.jpg" class="pfp"><p>MrJohn <code class="c">19:20</code></p>
+                <div class="content">
+                    Yep, I don't want to get bogged down in endless debate and even though Lorenzo isn't my favorite contender he is totally a fair choice.
+                </div>
+            </div>
+            <div class="textboxy">
+                <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:21</code></p>
+                <div class="contenty">
+                    Nice, I am now entitled to declare Lorenzo Quinn as Eco-Artist of the year, we will make everything in our power to spread his message all over the power in order to combate climate change. Goodbye everyone have a good day, I'm sure that we are all looking forward for the exposition !
+                </div>
+            </div>
+            <div class="textboxy">
+                <p> <code class="c">&nbsp</code></p>
+                <div class="contenty">
+                    <a href="ressources/images/lorenzo.jpg" target="_blank"><img src="ressources/images/lorenzo.jpg" style="border-radius: 8px; width: 21em; height: 21em;"></a>
+                </div>
+            </div>
+        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
         </div>
         <div style="background-color: #69baa0; border-radius: 50px; padding-left: 1em; height: 4.7vh; display: flex; align-items: center;">
-            <textarea minlength="1" spellcheck="false" rows="1" maxlength="2500" placeholder="Type here..." style="background-color: #69baa0; font-size: 2.5em; resize: none; color: #101010; border: none; outline: none; width: 96.5%;" ></textarea> <img src="ressources/images/send.png" id="send-btn" style="height: 2.8em; width: 2.8em">
+            <textarea minlength="1" spellcheck="false" rows="1" maxlength="2500" placeholder="Type here..." style="background-color: #69baa0; font-size: 2.5em; resize: none; color: #101010; border: none; outline: none; width: 96.5%;" ></textarea> <img src="ressources/images/attached.png" id="send-btn" style="height: 2.8em; width: 2.8em"> &nbsp <img src="ressources/images/send.png" id="send-btn" style="height: 2.8em; width: 2.8em"> &nbsp
         </div>
     </div>
     <script type="text/javascript" src="ressources/main.js"></script>
