--- a/nomination-salon.html
+++ b/nomination-salon.html
@@ -15,7 +15,7 @@
         <h1>EcologyForum</h1>
     </center>
     <div id="main-box">
-        <div style="overflow-y: auto; height: 75vh;" id="scroll-box">
+        <div style="overflow-y: auto; height: 94%;" id="scroll-box">
             <div style="display: flex; align-items: center; color: black; font-size: 1.5em;">
                 <p><div class="line"></div>10/04/2024<div class="line"></div></p>
             </div>
@@ -233,7 +233,7 @@
         </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
         </div>
         <div style="background-color: #69baa0; border-radius: 50px; padding-left: 1em; height: 4.7vh; display: flex; align-items: center;">
-            <textarea minlength="1" spellcheck="false" rows="1" maxlength="2500" placeholder="Type here..." style="background-color: #69baa0; font-size: 2.5em; resize: none; color: #101010; border: none; outline: none; width: 96.5%;" ></textarea> <img src="ressources/images/attached.png" id="send-btn" style="height: 2.8em; width: 2.8em"> &nbsp <img src="ressources/images/send.png" id="send-btn" style="height: 2.8em; width: 2.8em"> &nbsp
+            <textarea minlength="1" spellcheck="false" rows="1" maxlength="2500" placeholder="Type here..." style="background-color: #69baa0; font-size: 2.5em; resize: none; color: #101010; border: none; outline: none; width: 96.5%; height: 85%; overflow: hidden;" ></textarea> <img src="ressources/images/attached.png" id="send-btn" style="height: 4vh; width: 4vh"> &nbsp <img src="ressources/images/send.png" id="send-btn" style="height: 4vh; width: 4vh"> &nbsp
         </div>
     </div>
     <script type="text/javascript" src="ressources/main.js"></script>
