--- a/nomination-salon.html
+++ b/nomination-salon.html
@@ -35,13 +35,13 @@
             <div class="textbox">
                 <img src="ressources/images/smith.jpg" class="pfp"><p>MrSmith <code class="c">19:09</code></p>
                 <div class="content">
-                    Ok, we are ready to hear about him, who is he and what make him so special ?
+                    Ok, we are ready to hear about him, who is he and what makes him so special ?
                 </div>
             </div>
             <div class="textbox">
                 <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:10</code></p>
                 <div class="content">
-                    It's a singer who is called Lomepal. He made various songs where he included ecological subjects, like the one 50 degrees wich talk about the global warming.
+                    It's a singer who is called Lomepal. He made various songs where he included ecological subjects, like the one 50 degrees which talks about the global warming.
                 </div>
             </div>
             <div class="textbox">
@@ -89,7 +89,7 @@
             <div class="textboxy">
                 <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:12</code></p>
                 <div class="contenty">
-                    So, I have an other artist which deserve recognition, she is named Marina Debris, she is well-known for her work in the fashion industry, she made numerous clothes assembled with pieces of trash.
+                    So, I have an other artist who deserves recognition, she is named Marina Debris, she is well-known for her work in the fashion industry, she made numerous clothes assembled with pieces of trash.
                 </div>
             </div>
             <div class="textbox">
@@ -107,7 +107,7 @@
             <div class="textboxy">
                 <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:13</code></p>
                 <div class="contenty">
-                    Yes for sure, here is an example that I find mind-blowing where she assembled used facial mask to create a long dress in order to protest against single use plastics and how it can make marin life worse. She also includes two dogs in the picture to raise awarness on the impact of dogs on the environment and the rise of puppy farms.
+                    Yes for sure, here is an example that I find mind-blowing where she assembled used facial masks to create a long dress in order to protest against single use plastics and how it can make marin life worse. She also includes two dogs in the picture to raise awareness on the impact of dogs on the environment and the rise of puppy farms.
                 </div>
             </div>
             <div class="textboxy">
@@ -125,7 +125,7 @@
             <div class="textbox">
                 <img src="ressources/images/smith.jpg" class="pfp"><p>MrSmith <code class="c">19:14</code></p>
                 <div class="content">
-                    Your suggestion is good, it can be interresting to see a stylist in this nomination but she could not win aginst the talent of Benjamin Von Wong. If you have already seen his art you understand why I say that. He makes beautifuls installations with on one hand a part of nature and on the other hand a part of waste which is completing the nature beautifully. He confronts both of them in order to take beautifuls photography.
+                    Your suggestion is good, it can be interesting to see a stylist in this nomination but she could not win aginst the talent of Benjamin Von Wong. If you have already seen his art you understand why I say that. He makes beautifuls installations with on one hand a part of nature and on the other hand a part of waste which is completing the nature beautifully. He confronts both of them in order to take beautifuls photography.
                 </div>
             </div>
             <div class="textbox">
@@ -143,13 +143,13 @@
             <div class="textbox">
                 <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:15</code></p>
                 <div class="content">
-                    Oh oh, I see that we have very interresting contenders this evening, allow me to present mine...
+                    Oh oh, I see that we have very interesting contenders this evening, allow me to present mine...
                 </div>
             </div>
             <div class="textbox">
                 <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:16</code></p>
                 <div class="content">
-                    I think Max Liboiron is an ideal opponent to these persons, she has a background in environmental sciences which makes her an expert on the question and she uses waste collected from the Hudson river and surrounding New York areas to make snow globes which I find to be an interesting object. It create a kind of small biome that allow spectators to understand better what's happening down there in the oceans.
+                    I think Max Liboiron is an ideal opponent to these persons, she has a background in environmental sciences which makes her an expert on the question and she uses waste collected from the Hudson river and surrounding New York areas to make snow globes which I find to be an interesting object. It creates a kind of small biome that allows spectators to understand better what's happening down there in the oceans.
                 </div>
             </div>
             <div class="textbox" style="margin-top: -5vh;">
@@ -167,7 +167,7 @@
             <div class="textbox">
                 <img src="ressources/images/john.jpg" class="pfp"><p>MrJohn <code class="c">19:17</code></p>
                 <div class="content">
-                    If we need to present artists that make a splash, I'm going to chose Lorenzo Quinn and more specifically is art installation called Support that he made in 2017. It's a very striking installation since it is litterally exposed in the Grand Canal of Venise. We can see two gigantic hands allegedly belonging to a child which are holding back the facade of the hotel Ca’ Sagredo, it alert peoples about the risks of the global warming and therefore the rising of the sea level as well as the mass tourism and paquebots which puts the city in danger by weakening its fundations.
+                    If we need to present artists that make a splash, I'm going to choose Lorenzo Quinn and more specifically his art installation called Support that he made in 2017. It's a very striking installation since it is literally exposed in the Grand Canal of Venise. We can see two gigantic hands allegedly belonging to a child which are holding back the facade of the hotel Ca’ Sagredo, it alert peoples about the risks of the global warming and therefore the rising of the sea level as well as the mass tourism and paquebots which puts the city in danger by weakening its fundations.
                 </div>
             </div>
             <div class="textbox" style="margin-top: -5vh;">
@@ -185,7 +185,7 @@
             <div class="textbox">
                 <img src="ressources/images/smith.jpg" class="pfp"><p>MrSmith <code class="c">19:18</code></p>
                 <div class="content">
-                    If it's originality that matter for you, I think that Max Liboiron has had a good idea with her snowball. But personally i really apreciated John's proposition, i find that it's even more shocking for peoples when we try to imagine the rest of the child under the water. It overall something that a really big amount of peoples and to change the mentality of the most numerous is exactly what i'm looking for.
+                    If it's originality that matter for you, I think that Max Liboiron has had a good idea with her snowball. But personally i really apreciated John's proposition, i find that it's even more shocking for people when we try to imagine the rest of the child under the water. It's overall something that a really big amount of people and to change the mentality of the most numerous is exactly what i'm looking for.
                 </div>
             </div>
             <div class="textboxy">
@@ -203,7 +203,7 @@
             <div class="textbox">
                 <img src="ressources/images/william.jpg" class="pfp"><p>MrWilliam <code class="c">19:20</code></p>
                 <div class="content">
-                    Well well, I see that everybody is undecisive, on my part I think that after hearing all of this I am going to agree with MrSmith, even if everything is really tight and it's difficult to make a decision, the scope of Lorenzo's message make it preferable to represent our event !
+                    Well well, I see that everybody is undecisive, on my part I think that after hearing all of this I am going to agree with MrSmith, even if everything is really tight and it's difficult to make a decision, the scope of Lorenzo's message makes it preferable to represent our event !
                 </div>
             </div>
             <div class="textboxy">
@@ -221,8 +221,7 @@
             <div class="textboxy">
                 <img src="ressources/images/johnson.jpg" class="pfp"><p>MrJohnson <code class="c">19:21</code></p>
                 <div class="contenty">
-                    Nice, I am now entitled to declare Lorenzo Quinn as Eco-Artist of the year, we will make everything in our power to spread his message all over the power in order to combate climate change. Goodbye everyone have a good day, I'm sure that we are all looking forward for the exposition !
-                </div>
+                    Nice, I am now entitled to declare Lorenzo Quinn as Eco-Artist of the year, we will make everything in our power to spread his message all over the world
             </div>
             <div class="textboxy">
                 <p> <code class="c">&nbsp</code></p>
